# stock-analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  railway.toml  skills-lock.json
.issues/: 001-project-scaffolding.md  002-stock-pool.md  003-daily-data.md  004-valuation.md  005-technical.md  006-fundamental.md  007-capital-flow.md  008-composite-scoring.md  009-position-management.md  010-transaction-history.md  011-suggestions.md  012-sector-analysis.md  013-market-overview.md  014-report-export.md  015-scheduled-updates.md  016-docker-deploy.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: analysis.py  config.py  daily_data.py  position.py  stock.py
backend/app/routers/: analysis.py  config.py  data.py  export.py  market.py  positions.py  sectors.py  stocks.py  suggestions.py
backend/app/schemas/: stock.py
backend/app/services/: analyzer.py  data_fetcher.py  import_csv.py  scorer.py  suggestion.py
backup/: A股行业ETF前十大持仓.md  A股行业ETF持仓股票汇总.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Layout.jsx
frontend/src/pages/: Dashboard.jsx  Positions.jsx  Sectors.jsx  Settings.jsx  StockDetail.jsx  StockList.jsx  Suggestions.jsx
frontend/src/styles/: bmw-m-theme.css
stocks/: A股行业ETF持仓股票.csv
