[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "akshare>=1.18.64",
    "apscheduler>=3.11.2",
    "fastapi>=0.136.3",
    "openpyxl>=3.1.5",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
